--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=77121&format=png&color=000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ass9-appstore</title>
+    <title>AppStore</title>
   </head>
   <body>
     <div id="root"></div>
